- New database functions: 
	* grape.list_query_whitelist_delete
	* grape.user_id_from_fullnames
	* grape.username_from_fullnames
	* grape.api_error()
	* grape.clean_telephone_number (_tel TEXT)
- Fix when granting access for guest

0.0.6
- Support HTTPS
- New options in config: use_https, sslkey and sslcert
- Grape DocumentStore alias ds ( grape.get('ds')... )
- DocumentStore supports new option use_date. This will create subdirectories based on the year and date when storing files
- Logger will now create a symlink to the current log file (for example all-current.log, session-current.log, etc.)
- Express bumped to version 4.13.4
- Bumped the following package versions: underscore, body-parser, cookie-parser, connect-multiparty
- All the Logger functions will now join all arguments and log it
- If the session id is found in cookies instead of X-SessionID header; a warning is printed
- Added new API call /grape/login. This does the same as /session/new but doesn't set any cookies
- Added new API call /grape/logout

0.0.7:
- API responses will now include the headers X-Permission-Code and X-Permission-Error for better error handling
- Added user.employee_guid and user.employee_data to store employee info from Savanna
- Enable "trust proxy" setting

0.0.8:
- Removing extremely low fill factors. Performance difference noticeable on serial columns
- Changes to accommodate ps_bgworker's writing to logfiles instead of database
- Reporting framework
- Caching comms: Only connect to messagesocket once socket create were successful

0.0.9:
- Reading default_config.js if it exists 
- Hidden grape settings
- Fix deprecation warnings
- Store grape_version in settings
- user.username and process.pg_function is now UNIQUE
- Use XLSX.js for parsing of XLSX and XLS files
- Added GrapeClient class
- Data import will now create a table for each import containing the rows
- Added API calls to manipulate bgworker (/grape/bgworker/status, /grape/bgworker/start, /grape/bgworker/stop)

